--- a/Image Classifier Project.ipynb
+++ b/Image Classifier Project.ipynb
@@ -27,11 +27,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports here"
+    "# Imports here\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import torch\n",
+    "from torch import nn , optim\n",
+    "import torch.nn.functional as F\n",
+    "from torch.utils.data import dataloader\n",
+    "\n",
+    "import torchvision\n",
+    "from torchvision import datasets, transforms, models\n",
+    "from torchvision.datasets import ImageFolder\n",
+    "\n",
+    "from collections import OrderedDict\n",
+    "from PIL import Image\n",
+    "\n"
    ]
   },
   {
@@ -50,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,13 +83,31 @@
    "outputs": [],
    "source": [
     "# TODO: Define your transforms for the training, validation, and testing sets\n",
-    "data_transforms = \n",
-    "\n",
+    "train_transforms = transforms.Compose([transforms.RandomRotation(30),\n",
+    "                                     transforms.RandomResizedCrop(224),\n",
+    "                                     transforms.RandomHorizontalFlip(),\n",
+    "                                     transforms.ToTensor(),\n",
+    "                                     transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\n",
+    "                                     ])\n",
+    "validation_transforms = transforms.Compose([transforms.Resize(255),\n",
+    "                                     transforms.CenterCrop(224),\n",
+    "                                     transforms.ToTensor(),\n",
+    "                                     transforms.Normalize([0.485, 0.456, 0.406],[0.229, 0.224, 0.225])\n",
+    "                                     ])\n",
+    "test_transforms = transforms.Compose([transforms.Resize(255),\n",
+    "                                     transforms.CenterCrop(224),\n",
+    "                                     transforms.ToTensor(),\n",
+    "                                     transforms.Normalize([0.485, 0.456, 0.406],[0.229, 0.224, 0.225])\n",
+    "                                     ])\n",
     "# TODO: Load the datasets with ImageFolder\n",
-    "image_datasets = \n",
+    "train_dataset = ImageFolder(train_dir,transform=train_transforms)\n",
+    "valid_dataset = ImageFolder(valid_dir,transform=validation_transforms)\n",
+    "test_dataset =  ImageFolder(test_dir,test_transforms)\n",
     "\n",
     "# TODO: Using the image datasets and the trainforms, define the dataloaders\n",
-    "dataloaders = "
+    "train_dataloader = dataloader(train_dataset, batch_size=64, shuffle=True)\n",
+    "valid_dataloader = dataloader(test_dataset, batch_size=32)\n",
+    "test_dataloader = dataloader(test_dataset, batch_size=32)"
    ]
   },
   {
@@ -342,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
